SAML SSO : updated the web project, to use Jetty and Picketlink as the SP security framework